# shame

./: Cargo.toml  README.md
examples/hello_triangles/: Cargo.toml
shame/: Cargo.toml
shame/src/: lib.rs
shame_derive/src/: derive_layout.rs
shame_wgpu/: Cargo.toml
shame_wgpu/src/: lib.rs
