[package]
name = "shame_wgpu"
version = "2.0.0-beta.0"
description = "wgpu integration for shame — shader metaprogramming in Rust"
keywords = ["gpu", "shader", "wgpu", "graphics", "wgsl"]
categories = ["rendering::graphics-api", "rendering::shader"]
repository = "https://github.com/RayMarch/shame"
license = "MIT OR Apache-2.0"
edition = "2024"

[lib]
name = "shame_wgpu"
doctest = false # TODO(release) remove, and fix documentation to pass tests

[dependencies]
shame = { path = "../shame" }
wgpu = {workspace = true}
thiserror = "2.0.12"
concat-idents = "1.1.5"
